Add git page in RK TVV
