# boot/api/gen/v1/rk_common_service.swagger.json
@@ -4,6 +4,11 @@
     "title": "v1/rk_common_service.proto",
     "version": "version not set"
   },
+  "tags": [
+    {
+      "name": "RkCommonService"
+    }
+  ],
   "consumes": [
     "application/json"
   ],
@@ -130,6 +135,29 @@
       "get": {
         "summary": "Trigger Gc",
         "operationId": "RkCommonService_Gc",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "type": "object"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "tags": [
+          "RkCommonService"
+        ]
+      }
+    },
+    "/rk/v1/git": {
+      "get": {
+        "summary": "Get git information",
+        "operationId": "RkCommonService_Git",
         "responses": {
           "200": {
             "description": "A successful response.",
